parser/src/lexer/snapshots/enderpy_python_parser__lexer__tests__raw-bytes-literals-3.snap
---
source: parser/src/lexer/mod.rs
description: "a = rb\"hello\""
---
[
    Token {
        kind: Identifier,
        value: Str(
            "a",
        ),
        start: 0,
        end: 1,
    },
    Token {
        kind: Assign,
        value: None,
        start: 2,
        end: 3,
    },
    Token {
        kind: RawBytes,
        value: Str(
            "rb\"hello\"",
        ),
        start: 4,
        end: 13,
    },
]
