parser/src/lexer/snapshots/enderpy_python_parser__lexer__tests__raw-bytes-literals-6.snap
---
source: parser/src/lexer/mod.rs
description: "rb'''hello'''"
---
[
    Token {
        kind: RawBytes,
        value: Str(
            "rb'''hello'''",
        ),
        start: 0,
        end: 13,
    },
]
