parser/src/lexer/snapshots/enderpy_python_parser__lexer__tests__raw-f-string-literals-0.snap
---
source: parser/src/lexer/lexer.rs
description: "rf\"hello\""
---
[
    Token {
        kind: RawFStringStart,
        value: Str(
            "rf\"",
        ),
        start: 0,
        end: 3,
    },
    Token {
        kind: FStringMiddle,
        value: Str(
            "hello",
        ),
        start: 3,
        end: 8,
    },
    Token {
        kind: FStringEnd,
        value: Str(
            "\"",
        ),
        start: 8,
        end: 9,
    },
]
