parser/src/lexer/snapshots/enderpy_python_parser__lexer__tests__raw-f-string-literals-1.snap
---
source: parser/src/lexer/mod.rs
description: "rf\"world\""
---
[
    Token {
        kind: RawFStringStart,
        value: Str(
            "rf\"",
        ),
        start: 0,
        end: 3,
    },
    Token {
        kind: FStringMiddle,
        value: Str(
            "world",
        ),
        start: 3,
        end: 8,
    },
    Token {
        kind: FStringEnd,
        value: Str(
            "\"",
        ),
        start: 8,
        end: 9,
    },
]
