parser/src/lexer/snapshots/enderpy_python_parser__lexer__tests__raw-f-string-literals-2.snap
---
source: parser/src/lexer/lexer.rs
description: "rf\"\""
---
[
    Token {
        kind: RawFStringStart,
        value: Str(
            "rf\"",
        ),
        start: 0,
        end: 3,
    },
    Token {
        kind: FStringEnd,
        value: Str(
            "\"",
        ),
        start: 3,
        end: 4,
    },
]
