parser/src/lexer/snapshots/enderpy_python_parser__lexer__tests__raw-f-string-literals-5.snap
---
source: parser/src/lexer/lexer.rs
description: "rf\"\"\"hello\"\"\""
---
[
    Token {
        kind: RawFStringStart,
        value: Str(
            "rf\"\"\"",
        ),
        start: 0,
        end: 5,
    },
    Token {
        kind: FStringMiddle,
        value: Str(
            "hello",
        ),
        start: 5,
        end: 10,
    },
    Token {
        kind: FStringEnd,
        value: Str(
            "\"\"\"",
        ),
        start: 10,
        end: 13,
    },
]
